# softdips-manager

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.md  README.md
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml
src/cli/: main_cli.cpp
src/core/: softdips.cpp  softdips.h
src/gui/: main_gui.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
src/web/: bindings.cpp
tests/: test_core.cpp  test_softdips.cpp
web/: app.js  index.html  style.css
